# gVAMP

./: CMakeLists.txt  CMakeLists.txt.in  Dockerfile  EM_RIAMP_fast.m  LICENSE  Makefile  Makefile_G  README.md  RIAMP_fast_Horseshoe.m  RIAMP_fast_sim_real.m  RIAMP_with_Horseshoe_run.m  VAMP_LR_SE.m  compile_with_gcc.sh  compile_with_gcc_ist.sh  compile_with_intel.sh  data.cpp  data.hpp  denoiserXXT.cpp  dotp_lut.hpp  free_cumulants_calc.m  main.cpp  main_corr.cpp  main_meth.cpp  main_meth_probit.cpp  main_real.cpp  main_real_probit.cpp  main_real_test.cpp  na_lut.hpp  options.cpp  options.hpp  perm_dotp_lut.hpp  run_gvamp.sh  sim.cpp  sim_heavy_tails.cpp  sim_probit.cpp  sim_realistic.cpp  spectral_plot_genotype_mat.m  test_HT_pruned_uncorrpeople_sim.sh  test_HT_uncorrpeople.sh  utilities.cpp  (+5 more)
CSCS/: Makefile_CSCS  cscs_compile_source.sh  cscs_srun_check_MPI_1_task_against_reference.sh
CSCS/strong_scaling_fullSim/: cscs_sbatch_strong_scaling_fullSim_83_12_1.sh  cscs_sbatch_strong_scaling_fullSim_83_1_12.sh
EPFL/binding/: groups36_mix4_unrelated_cpus4_tasks8_nodes10_mpisync10_height_4_unrelated_148covadjusted_w35520NA.sh
EPFL/data_processing/: run_all_bayes_tests.sh  srun_bayes_test.sh  srun_convert_bed_to_sparse.sh
EPFL/data_processing/old/: srun_check_MPI_1_task_against_reference.sh  srun_check_synchro.sh  srun_cov_nas.sh  srun_temp_bayesW_test.sh
EPFL/data_processing/sallocs/: salloc_debug_gacrux.sh  salloc_debug_gacrux_1cpu.sh  salloc_debug_gacrux_2_nodes.sh
MATLAB/: EM_VAMP_LR_fast.m  PlinkRead_bim.m  RIAMP_fast.m  RIAMP_fast_scaled.m  VAMP_LR_gen.m  discretesample.m  f_ErrMes_print.m  f_LMMSE.m  f_Lasso.m  f_infere_AMP.m  fk_pseudoMem.m  fkd_pseudoMem.m  rank_calculation.m  t_AMPs_test.m  t_basicAMP_corr.m  t_f_infere_pseudoMemAMP.m  vis.m
MATLAB_baby_model/: f_infere_AMP.asv  f_infere_AMP.m  fkd.m  t_basicAMP_corr.asv
cpp_vamp/: R2_on_test_set.m  data.cpp  data.hpp  denoiserXXT.cpp  dotp_lut.hpp  main.cpp  main_benchmark.cpp  main_corr.cpp  main_corr_big.cpp  main_meth_ex.cpp  main_real.cpp  options.cpp  options.hpp  perm_dotp_lut.hpp  perm_lut.hpp  run_main_benchmark.sh  run_vamp_main.sh  run_vamp_main_orig.sh  run_vamp_real.sh  storage_room.cpp  utilities.cpp  utilities.hpp  vamp.cpp  vamp.hpp  vamp_probit.cpp
cpp_vamp/testing/aux/: ukb22828_UKB_EST_v3_ldp005_maf01.dims  ukb22828_UKB_EST_v3_ldp005_maf01.gris  ukb22828_UKB_EST_v3_ldp005_maf01.grm
cpp_vamp/testing/aux_functions/: averaging_effect_over_iter.sh  extract_beta_gmrm.sh  (+1 more)
dnanexus_applet/: Readme.developer.md  Readme.md  dxapp.json
dnanexus_applet/src/: gvamp.sh
dnanexus_example/: README.md  run_gvamp.sh
old_stuff/: basicAMP.cpp  compile_with_intel_ist.sh  test_HT_uncorrpeople_005.sh
old_stuff/CSCS/: cscs_sbatch_weak_scaling_1_1.sh
old_stuff/MATLAB/: chunked_frame_reader.m  f_Gibbs.m  f_basicAMP_SE.m  f_infere_pseudoMemAMP.m  fk.m  fkd.m  gk_pseudoMem.m  gkd_pseudoMem.m  pseudoMem_SE.m
old_stuff/MATLAB_baby_model/: fk.asv  fk.m  genotype_mat_spectrum.m  t_basicAMP_corr.m
old_stuff/src/: BayesRRm.cpp  BayesRRm_mt.cpp  BayesRRm_mt.h  BayesW_arms.h  KPM_Chebyshev.hpp  analysisgraph.hpp  ars.hpp  bed_to_sparse.cpp  components_converter.c  constants.hpp  data.cpp  dense.hpp  densities.hpp  dotp_lut.h  epsilon_converter.c  gadgets.cpp  gadgets.hpp  geneAMP.cpp  hydra.h  main.cpp  options.cpp  options.hpp  sparse_mult_tools.hpp  test.sh  utils.cpp
old_stuff/test/: CMakeLists.txt  main.cpp
riamp_cpp/: .gitignore  LICENSE  Makefile.ext  README.md  configure
riamp_cpp/benchmarking/: bench_ardyh.sh  bench_bed_to_sparse.sh  generate_group_files.pl  profile_vtune-amplifier_and_advisor.sh  test_pred.sh
riamp_cpp/example/: README  data_sim.R  extract_non_zero_betaAll  part1_gcc_mvapich2.sh  part1_intel_ioampi.sh  part2_gcc_mvapich2.sh  part2_intel_ioampi.sh  test.bim  test.fam  test.gri  test.grm  test1.phen  test1_nas.phen  test2.phen
riamp_cpp/setup/: Make.gcc_mvapich2  Make.intel_ioampi
riamp_cpp/src/: bayes.cpp  bayes.hpp  const.hpp  dimensions.cpp  dimensions.hpp  distributions.hpp  dotp_lut.hpp  main.cpp  na_lut.hpp  options.cpp  options.hpp  phenotype.cpp  phenotype.hpp  riamp.cpp  riamp.hpp  utilities.cpp  utilities.hpp  xfiles.cpp  xfiles.hpp
scripts/: p_vals.py  traces.py
src/: BayesRRm.h  BayesW_arms.cpp  CMakeLists.txt  KPM_Chebyshev.cpp  analysisgraph.cpp  bed_to_sparse.hpp  beta_checker.c  beta_converter.c  cmake_install.cmake  data.hpp  denoiser.cpp  denoiser.hpp  dense.cpp  depsx.cpp  depsx.hpp  distributions_boost.cpp  distributions_boost.hpp  gauss_hermite.cpp  gauss_hermite.hpp  geneAMP.hpp  mk_lut.cpp  sparse.cpp  sparse.hpp  sparse_mult_tools.cpp  utils.hpp  xfiles.cpp  xfiles.h
test/: dataTest.cpp
test/data/: uk10k_chr1_1mb.fam
testing/aux_functions/: run_gmrm_baseline.sh
(+31 files in other folders)
